--- a/public/404.html
+++ b/public/404.html
@@ -2,25 +2,33 @@
 <html>
 <head>
   <title>The page you were looking for doesn't exist (404)</title>
-  <style type="text/css">
-    body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
-    div.dialog {
-      width: 25em;
-      padding: 0 4em;
-      margin: 4em auto 0 auto;
-      border: 1px solid #ccc;
-      border-right-color: #999;
-      border-bottom-color: #999;
-    }
-    h1 { font-size: 100%; color: #f00; line-height: 1.5em; }
-  </style>
+  <link href="assets/application.css" media='all' rel='stylesheet' type='text/css' />
 </head>
 
 <body>
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
-  </div>
+  <header class="navbar navbar-static-top">
+      <nav class="navbar-inner">
+        <div class="container">
+          <a href="/" class="brand"><img alt="Logo" src="/assets/logo.png"></a>
+        </div>
+      </nav>
+    </header>
+    <div id="main" role="main">
+      <div class="container">
+        <div class="content">
+           <div class="row">
+            <div class="span12">
+              <div class="alert alert-error">
+              <h1>The page you were looking for doesn't exist.</h1>
+              <strong>You may have mistyped the address or the page may have moved.</strong>
+            </div>
+            </div>
+
+          </div>
+        </div>
+        <footer class="footerinfo">
+        </footer>
+      </div> <!--! end of .container -->
+    </div> <!--! end of #main --><br /><br />
 </body>
 </html>
