--- a/rails_best_practices_output.html
+++ b/rails_best_practices_output.html
@@ -96,15 +96,6 @@
             </td>
             <td class='line'>16</td>
             <td class='message'>
-              <a href='http://rails-bestpractices.com/posts/21-always-add-db-index' target='_blank'>always add db index (radlibs => [template_id])</a>
-            </td>
-          </tr>
-          <tr class="AlwaysAddDbIndexReview">
-            <td class='filename'>
-                db/schema.rb
-            </td>
-            <td class='line'>16</td>
-            <td class='message'>
               <a href='http://rails-bestpractices.com/posts/21-always-add-db-index' target='_blank'>always add db index (radlibs => [user_id])</a>
             </td>
           </tr>
@@ -114,12 +105,21 @@
             </td>
             <td class='line'>79</td>
             <td class='message'>
-              <a href='http://rails-bestpractices.com/posts/21-always-add-db-index' target='_blank'>always add db index (templates => [user_id])</a>
+              <a href='http://rails-bestpractices.com/posts/21-always-add-db-index' target='_blank'>always add db index (stories => [radlib_id])</a>
+            </td>
+          </tr>
+          <tr class="AlwaysAddDbIndexReview">
+            <td class='filename'>
+                db/schema.rb
+            </td>
+            <td class='line'>79</td>
+            <td class='message'>
+              <a href='http://rails-bestpractices.com/posts/21-always-add-db-index' target='_blank'>always add db index (stories => [user_id])</a>
             </td>
           </tr>
           <tr class="LawOfDemeterReview">
             <td class='filename'>
-                app/presenters/radlib_presenter.rb
+                app/presenters/story_presenter.rb
             </td>
             <td class='line'>37</td>
             <td class='message'>
